--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Пуста сторінка</title>
+  <title>Hello</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+
+  <script>
+    let name = prompt('What\'s your name?');
+    let quest = confirm(`Hello, ${name} Are you feeling good?`)
+    if (quest) {
+      alert(`Great, ${name}!\n Glad to hear this!`)
+    } else {
+      alert('Ough! It\'s sad to hear that.\n Hopefully, it won\'t be for long')
+    }
+  </script>
 
 </body>
 
