готовая третья домашка

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <script>
+  <!-- <script>
     let name = prompt('What\'s your name?');
     let quest = confirm(`Hello, ${name} Are you feeling good?`)
     if (quest) {
@@ -18,8 +18,9 @@
     } else {
       alert('Ough! It\'s sad to hear that.\n Hopefully, it won\'t be for long')
     }
-  </script>
+  </script> -->
 
+  <script src="js/main.js"></script>
 </body>
 
 </html>
